--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 <section class="hero is-small is-light">
   <div class="hero-body">
     <h2 class="title is-4 has-text-centered heading-fixed">Poster</h2>
-    <div class="container">
+    <div class="container" style="text-align: center;">
       <iframe src="https://drive.google.com/file/d/1ofqW1u5Tn6R8qa2SEs_r3V4QvRsBEuId/preview" width="640" height="480" allow="autoplay"></iframe>
       </div>
     </div>
