fixed motivation citation

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
             <p>Recent prosthetics investigations, however, have shown that <b>increased dexterity in wrist prostheses
                 may contribute more to manipulation capacity than a highly dexterous terminal device with limited wrist
-                capability. </b> <a href="https://ieexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8624352"
+                capability. </b> <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8624352"
                 target="_blank" style="color: blue;"> [1] </a></p>
           </div>
           <div style="font-size: 2em; color: #666; line-height: 1; text-align: right;">"</div>
