clarified resets were fewer for all tasks not just constrained

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <div class="gif-item teleop-left">
             <img src="static/images/teleoptable.png" alt="Teleoperation Table" style="width: 100%">
             <p style="font-size:1.25em">More data efficient: Fewer environment resets required and less overall human
-              teleoperator time in constrained spaces.</p>
+              teleoperator time in constrained & dynamic tasks.</p>
           </div>
           <div class="gif-item teleop-right">
             <iframe id="teleopChartFrame" src="teleop.html" width="100%" style="border:0; overflow:hidden; height:570px;" frameborder="0" scrolling="no"></iframe>
